--- a/cms/templates/cms/home.html
+++ b/cms/templates/cms/home.html
@@ -11,28 +11,24 @@
         <div class="container">
             <div class="row align-items-center {% if profile.template_choice == 'startup' %}flex-column-reverse flex-lg-row{% endif %}">
                 
-                <div class="col-12 {% if profile.template_choice == 'startup' %}col-lg-12 text-center order-2{% else %}col-lg-6 order-1{% endif %} {% if profile.template_choice == 'boutique' %}col-lg-7{% endif %}">
-                    <div class="hero-content">
-                        <h1 class="hero-title">{{ profile.hero_title }}</h1>
-                        <p class="hero-text">{{ profile.hero_text|linebreaksbr }}</p>
-                        <div class="hero-actions {% if profile.template_choice == 'startup' %}justify-content-center{% endif %}">
-                            {% if profile.featured_job %}
-                                <a href="#featured-role" class="btn btn-primary btn-lg">View Featured Role</a>
-                            {% else %}
-                                <a href="{% url 'cms:job_list' %}" class="btn btn-primary btn-lg">View All Jobs</a>
-                            {% endif %}
-                            <a href="{% url 'cms:about' %}" class="btn btn-outline-dark btn-lg">Learn About Us</a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="col-12 {% if profile.template_choice == 'startup' %}col-lg-10 mx-auto order-1 mb-5{% else %}col-lg-6 order-2{% endif %} {% if profile.template_choice == 'boutique' %}col-lg-5{% endif %}">
-                    <div class="hero-image-wrapper">
-                        <img src="{{ profile.get_hero_image }}" alt="{{ profile.display_name }}" class="hero-img-styled">
-                    </div>
-                </div>
+<div class="row align-items-center">
+    <div class="col-12 col-lg-7 order-2 order-lg-1">
+        <div class="hero-content">
+            <h1 class="hero-title">{{ profile.hero_title }}</h1>
+            <p class="hero-text">{{ profile.hero_text|linebreaksbr }}</p>
+            <div class="hero-actions">
+                <a href="{% url 'cms:job_list' %}" class="btn btn-primary btn-lg">View All Jobs</a>
+                <a href="{% url 'cms:about' %}" class="btn btn-outline-dark btn-lg">Our Team</a>
             </div>
         </div>
+    </div>
+    
+    <div class="col-12 col-lg-5 order-1 order-lg-2 mb-5 mb-lg-0">
+        <div class="hero-image-wrapper">
+            <img src="{{ profile.get_hero_image }}" class="hero-img-styled">
+        </div>
+    </div>
+</div>
     </section>
     
 </div>
