--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Pillar & Post{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'marketing/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'marketing/css/marketing_style.css' %}">
     
     {% block extra_css %}{% endblock %}
 </head>
